--- a/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2 class="text-center">Созданиние защищенной базы данных</h2>
+    <h2 class="text-center">Создание защищенной базы данных</h2>
 
     @using (Html.BeginForm("CreateProtectedDb", "CsDispatcher", FormMethod.Post, new {@id = "mainForm"}))
     {
