--- a/CursachPrototype/Views/CsDispatcher/RequestConnectionString.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/RequestConnectionString.cshtml
@@ -17,7 +17,7 @@
                 <div class="alert alert-warning text-center col-md-6 col-md-offset-3">
                     <h5 class="alert-heading">Внимание!</h5>
                     <h4 class="alert alert-warning" role="alert">
-                        Передача строки подсключения потенциально опасна. Убедитесь, что соеденение безопасно. В противном случае
+                        Передача строки подключения потенциально опасна. Убедитесь, что соеденение безопасно. В противном случае
                         воспользуйтесь визуальным редактором базы данных или проведите запрос с сайта.
                     </h4>
                     <br>
