--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="header-content-inner">
             <h1 id="homeHeading">Fast SQL - Ваш лучший помощник по созданию удаленных баз данных</h1>
             <hr>
-            <p>Используя FastSQL вы имеете возможность создать бесплантную базу данных в один клик!</p>
+            <p>Используя FastSQL Вы имеете возможность создать бесплатную базу данных в один клик!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Ух-ты</a>
         </div>
     </div>
@@ -17,11 +17,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">У нас есть всё что вам надо!</h2>
+                <h2 class="section-heading">У нас есть всё, что Вам надо!</h2>
                 <hr class="light">
                 <p class="text-faded">
                     Используя FastSQL создавайте общедоступную базу данных в один клик! Без регистрации и длительных настроек!
-                    Все созданные базы данных будут расположены на облачном сервере Azure и доступны в любой вашей программе для использования.
+                    Все созданные базы данных будут расположены на облачном сервере Azure и доступны в любой Вашей программе для использования.
                 </p>
                 <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">СОздать</a>
             </div>
@@ -44,7 +44,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
                         <h3>База Данных без регистрации</h3>
-                        <p class="text-muted">Создается база данных со случайно сгенирированными учётными данными.</p>
+                        <p class="text-muted">Создается база данных со случайно сгенерированными учётными данными.</p>
                     </div>
                 </a>
             </div>
@@ -55,7 +55,7 @@
                         <h3>Защищенная база данных (требуется регистрация)</h3>
                         <p class="text-muted">
                             Создается база данных. В качестве логина выступает ваш ник, пароля - заданный при создании пароль.
-                            База данных добавляется в личный кабинет может быть редактирована прямо на сайте.
+                            База данных добавляется в личный кабинет и может быть редактирована прямо на сайте.
                         </p>
                     </div>
                 </a>
@@ -69,7 +69,7 @@
         </div>
         <div class="row">
             <div class="center-block text-center">
-                @Ajax.RawActionLink(" <div class=\"service-box\"> <i class=\"fa fa-4x fa-envelope text-primary sr-icons\"></i><h3>Запрос к базе данных</h3><p class=\"text-muted\">Сделайте запрос к вашей базе данных через наш сервис с использованием нашего SQL-редактора.</p></div>", 
+                @Ajax.RawActionLink(" <div class=\"service-box\"> <i class=\"fa fa-4x fa-envelope text-primary sr-icons\"></i><h3>Запрос к базе данных</h3><p class=\"text-muted\">Сделайте запрос к Вашей базе данных через наш сервис с использованием нашего SQL-редактора.</p></div>", 
                 "MakeQuery", "Home", null, new AjaxOptions {UpdateTargetId = "ajax"}, null)
             </div>
         </div>
@@ -87,7 +87,7 @@
                                 AZURE
                             </div>
                             <div class="project-name">
-                                Microsoft AZURE является одним из самых надежных поставщиков облачных технологий. Мы используем Azure для хостинга ваших баз данных
+                                Microsoft AZURE является одним из самых надежных поставщиков облачных технологий. Мы используем Azure для хостинга Ваших баз данных.
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 SQL
                             </div>
                             <div class="project-name">
-                                Structured Query Language является признаным стандартом по управлению Базами Данных. Вы можете в любой момент из личного кабинета обратится к
+                                Structured Query Language является признанным стандартом по управлению Базами Данных. Вы можете в любой момент из личного кабинета обратиться к
                                 вашей базе данных с помощью нашего поля SQL запросов.
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                 SQL Server 2014
                             </div>
                             <div class="project-name">
-                                SQL Server является Системой Управления Реляционными Базами Данных от компании Microsoft. Сильный конкурент в корпоративном сегмените рынка.
+                                SQL Server является Системой Управления Реляционными Базами Данных от компании Microsoft. Сильный игрок в корпоративном сегменте рынка.
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Stay In Touch!</h2>
                 <hr class="primary">
-                <p>Если вам что-то не нравится или возникли какие-либо вопросы - свяжитесь с нами!</p>
+                <p>Если Вам что-то не нравится или возникли какие-либо вопросы - свяжитесь с нами!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x sr-contact"></i>
