--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -15,12 +15,12 @@
             </div>
 
             <div class="form-group text-center col-md-6 col-md-offset-3">
-                @Html.LabelFor(model => model.NickName, "Электронный адресc:")
+                @Html.LabelFor(model => model.NickName, "Электронный адрес:")
                 @Html.TextBoxFor(model => model.Email, new {@class = "form-control text-center"})
             </div>
 
             <div class="form-group text-center col-md-6 col-md-offset-3">
-                @Html.LabelFor(model => model.NickName, "Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных:")
+                @Html.LabelFor(model => model.NickName, "Ваш ник. Используется как суффикс к имени Ваших баз данных и логин для подключения к базе данных:")
                 @Html.TextBoxFor(model => model.NickName, new {@class = "form-control text-center"})
             </div>
 
